[metadata]

name = iris-predictor-Shreyas_Kamath
version = 0.0.1
author = Shreyas Kamath
author_email = shreyaskamath18@gmail.com

url = https://github.com/s18k/iris-predictor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

